--- a/PythonIntroduction.ipynb
+++ b/PythonIntroduction.ipynb
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 61,
    "id": "27f9d682-5aad-4662-a5b2-f87ffc06b1f3",
    "metadata": {},
    "outputs": [
@@ -363,12 +363,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "negative\n"
+      "positive\n"
      ]
     }
    ],
    "source": [
     "#number = -2\n",
+    "number = 6\n",
     "if number < 0:\n",
     "    print(\"negative\")\n",
     "elif number > 0:\n",
@@ -383,9 +384,7 @@
    "id": "952f9374-1236-413f-8dfe-682b9dc5b48c",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#"
-   ]
+   "source": []
   }
  ],
  "metadata": {
