--- a/PythonIntroduction.ipynb
+++ b/PythonIntroduction.ipynb
@@ -380,8 +380,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "952f9374-1236-413f-8dfe-682b9dc5b48c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n",
+      "12\n",
+      "14\n",
+      "16\n",
+      "18\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "for number in range(0, 21):\n",
+    "    if number % 2 == 0:\n",
+    "        print(number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ccc3b43b-9fee-447d-9f12-6ce6948a90f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the word list is at index:  10\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentence = ['The','while', 'loop', 'goes', 'through', 'all', 'the', 'items',\n",
+    "            'in', 'the', 'list', 'until', 'it', 'finds', 'what', \"it's\", 'looking', 'for.']\n",
+    "i = 0\n",
+    "\n",
+    "while sentence[i] != 'list':\n",
+    "    i+=1\n",
+    "print(\"the word list is at index: \", i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9fd4f0e-e949-4d9d-b2ce-d239fdcc55e2",
    "metadata": {},
    "outputs": [],
    "source": []
